--- a/README
+++ b/README
@@ -11,6 +11,12 @@ http://github.com/levold/ics2gCal/
 Your feedback is also welcome at paal.levold@gmail.com
 
 
+CONTRIBUTIONS
+=============
+
+You are most welcome to contibute code to this project. Use contact
+information mentioned above
+
 LICENCE
 =======
 
