--- a/README
+++ b/README
@@ -14,6 +14,8 @@ Your feedback is also welcome at paal.levold@gmail.com
 LICENCE
 =======
 
+GNU GPL v3
+
 ics2gCal is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
