--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Your feedback is also welcome at paal.levold@gmail.com
 CONTRIBUTIONS
 =============
 
-You are most welcome to contibute code to this project. Use contact
+You are most welcome to contribute code to this project. Use contact
 information mentioned above
 
 LICENCE
@@ -39,7 +39,7 @@ along with ics2gCal.  If not, see <http://www.gnu.org/licenses/>.
 DOWNLOAD
 ========
 
-Lates version can be found at http://github.com/levold/ics2gCal
+Latest version can be found at http://github.com/levold/ics2gCal
 
 
 DEPENDENCIES
@@ -61,7 +61,7 @@ USAGE
 1) Create a configuration file named 'config' in the same directory as ics2gCal.
 	 Tip: Use the layout provided below.
 
-2) Create an empty file where UIDs of added events will be stored (namend in the config file).
+2) Create an empty file where UIDs of added events will be stored (named in the config file).
 
 3) Run the script (./ics2gCal.py) either manually or by creating a cron job
 
@@ -70,7 +70,7 @@ USAGE WITHOUT ROOT ACCESS
 =========================
 
 If you don't have root access to the computer and need to install some of the dependencies you can
-download the dependecies as usual, but instead of running
+download the dependencies as usual, but instead of running
 
 # ./setup.py install
 
@@ -91,7 +91,7 @@ CONFIG FILE LAYOUT
 [calendar1]
 url = <FILL IN>
 sha1 = <FILL IN> #whatever as long as it isn't the actual sha1 of the ics file (will be updated)
-addto = <FILL IN> #Calnedar in gCal to add events to. If unsure, use /calendar/feeds/default/private/full>
+addto = <FILL IN> #Calendar in gCal to add events to. If unsure, use /calendar/feeds/default/private/full>
 
 [calendar2]
 url = <FILL IN>
@@ -104,5 +104,3 @@ addto = <FILL IN>
 username = <FILL IN>@gmail.com
 password = <FILL IN>
 eventfile = addedEvents.txt
-
-	
